# log

./: .gitmodules  CMakeLists.txt  biicode.conf  log.h
include/log/: formatter.h  holder.h  log.h  log4cplus.h  logger.h  std_log.h
src/: formatter.h  holder.cpp  holder.h  log.h  std_log.cpp  std_log.h
src/log4cplus/: log4cplus.cpp
tests/: CMakeLists.txt  log_tests.cpp
